--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -1,11 +1,19 @@
 name: Create Release
 
 on:
-  push:
-    branches: 
-      - "main"
-    paths: 
-      - "modinfo.json"
+  workflow_dispatch:
+    inputs:
+      mod:
+        type: choice
+        description: Which mod to release
+        options:
+        - BetterMoisture
+        - BetterStepping
+        - PickUpFast
+        required: true
+      message:
+        description: Message
+        required: true
 
 jobs:
   build:
@@ -19,29 +27,41 @@ jobs:
       uses: actions/setup-dotnet@v3
       with:
         dotnet-version: 7.0.x
-      
-    - name: Build 
-      run: dotnet build code/
-      
+
+    - name: Add dependencies
+      uses: Amzd/vsdep@v0
+      with:
+        version: 1.18.8
+        vspath: /usr/share/vintagestory/
+
+    - name: downcase input because the folders are lowercase
+        run: |
+          MOD=${{ inputs.mod }}
+          echo "MODFOLDER=${MOD,,}" >>${GITHUB_ENV}
+
+    - name: Build
+      run: dotnet build ${MODFOLDER}/code/
+
     - name: zip
       run: |
-        mv code/bin/Debug/net7/BetterMoisture.dll . 
-        mv code/bin/Debug/net7/BetterMoisture.pdb .
-        7z a BetterMoisture.zip BetterMoisture.dll BetterMoisture.pdb modinfo.json
-    
+        cd ${MODFOLDER}
+        mv code/bin/Debug/net7/${{ inputs.mod }}.dll .
+        mv code/bin/Debug/net7/${{ inputs.mod }}.pdb .
+        7z a ${{ inputs.mod }}.zip ${{ inputs.mod }}.dll ${{ inputs.mod }}.pdb modinfo.json
+
     - name: Write modinfo.json to env
       run: |
         echo 'MODINFO_JSON<<EOF' >> $GITHUB_ENV
-        cat ./modinfo.json >> $GITHUB_ENV
+        cat ./${MODFOLDER}/modinfo.json >> $GITHUB_ENV
         echo 'EOF' >> $GITHUB_ENV
-        
+
     - name: Release
       uses: actions/create-release@v1
       id: create_release
       with:
         draft: false
         prerelease: false
-        release_name: ${{ fromJson(env.MODINFO_JSON).version }}
+        release_name: ${{ inputs.mod }} ${{ fromJson(env.MODINFO_JSON).version }}
         tag_name: ${{ github.ref }}
         body_path: CHANGELOG.md
       env:
@@ -53,6 +73,6 @@ jobs:
         GITHUB_TOKEN: ${{ github.token }}
       with:
         upload_url: ${{ steps.create_release.outputs.upload_url }}
-        asset_path: ./BetterMoisture.zip
-        asset_name: BetterMoisture.zip
+        asset_path: ./${MODFOLDER}/${{ inputs.mod }}.zip
+        asset_name: ${{ inputs.mod }}.zip
         asset_content_type: application/zip
